@@ -30,6 +30,7 @@ $ -> Language fix or change
  ^ [#31355] *Multilanguage: Adding bootstrap tooltips to the associations button.  Thanks Jean-Marie Simonet
  # [#31363] Commit for issue 30966 garbles HTML for URL's in forms.  Thanks Mark Dexter
  # [#31361] SQL Error in Banner Manager: Clients.  Thanks Mark Dexter
+ + [#31289] Add JResponseJson as a CMS library class.  Thanks Patrick Alt
 
 06-Jul-2013 Jean-Marie Simonet
  ^$ [#31190] *Multilanguage improvement: edit associated items in the Association Tab. Thanks Dennis Hermatski.
